--- a/style.css
+++ b/style.css
@@ -93,6 +93,16 @@ a.a-black{
 	pointer-events: none;
 }
 
+a.a-yel{
+	_text-decoration: underline overline blue dotted;
+	_text-underline-offset: 5px;
+	color: black;
+	background-color: yellow;
+	border-radius: 5px;
+	padding: 0 5px 0 5px;
+	pointer-events: none;
+}
+
 a.isi{
 	text-decoration: underline black dotted;
 	text-underline-offset: 5px;
@@ -271,4 +281,10 @@ hr{
 .imghr{
 	width: 85%;
 	height: auto;
+}
+
+.imghrflip{
+	width: 85%;
+	height: auto;
+	transform: scaleX(-1);
 }
