--- a/style.css
+++ b/style.css
@@ -83,9 +83,7 @@ a.a-blue{
 	text-underline-offset: 5px;
 }
 
-a.a-black{
-	_text-decoration: underline overline blue dotted;
-	_text-underline-offset: 5px;
+a.blk{
 	color: white;
 	background-color: black;
 	border-radius: 5px;
@@ -93,11 +91,25 @@ a.a-black{
 	pointer-events: none;
 }
 
-a.a-yel{
-	_text-decoration: underline overline blue dotted;
-	_text-underline-offset: 5px;
+a.yel{
 	color: black;
 	background-color: yellow;
+	border-radius: 5px;
+	padding: 0 5px 0 5px;
+	pointer-events: none;
+}
+
+a.blu{
+	color: black;
+	background-color: #baf9ff;
+	border-radius: 5px;
+	padding: 0 5px 0 5px;
+	pointer-events: none;
+}
+
+a.pink{
+	color: black;
+	background-color: #ffc8ea;
 	border-radius: 5px;
 	padding: 0 5px 0 5px;
 	pointer-events: none;
@@ -275,9 +287,15 @@ p::first-letter{
   font-style: italic;
 }
 
-li{
-	padding: 1rem 0 1rem 0;
+ol {
+	padding-left: 2.2rem;
 }
+
+li{
+	padding: 1rem 0.1rem 1rem 0;
+}
+
+
 
 hr{
 	width: 85%;
@@ -298,5 +316,29 @@ hr{
 
 sup {
 	vertical-align: sup;
-    font-size: 0.6rem;
+    font-size: 0.5rem;
+	color: purple;
+}
+
+table {
+	border-spacing: 0;
+	width: 95%;
+	margin: 1rem auto 1rem auto;
+	border: 1px solid teal none;
+}
+
+th{
+	font-size: 0.6rem;
+	text-align: center;
+	background-color: #e8daff;
+}
+
+td{
+	_border: 1px solid teal;
+	font-size: 0.6rem;
+	vertical-align: top;
+	border-top: 1px solid black;
+	border-right: none;
+	border-left: none;
+	border-bottom: none;
 }
