--- a/style2.css
+++ b/style2.css
@@ -12,7 +12,7 @@
       padding:5px;
       text-align:center;
 	  font-size: 12px;
-	  background-color: white;
+	  background-color: black;
 
     }
     #nav li{
