--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ header{
 	border-left: 0.125rem solid black;
 	box-shadow: 0.313rem 0.313rem black;
 	padding: 1rem;
+	border-top-left-radius: 2rem; 
 }
 
 main{
@@ -55,6 +56,7 @@ main{
 	border-bottom: 0.125rem solid black;
 	box-shadow: 0.313rem 0.313rem black;
 	padding: 1rem 0 0 0;
+	border-bottom-right-radius: 2rem;
 }
 
 #td1{
