--- a/style.css
+++ b/style.css
@@ -345,3 +345,16 @@ td{
 td.dash {
 	border-left: 1px dashed grey;
 }
+
+.autoRotate{
+    animation: autoRotateAnimation;
+    animation-timeline: view(25% 25%);
+}
+@keyframes autoRotateAnimation{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
+}
