--- a/style.css
+++ b/style.css
@@ -21,10 +21,7 @@ body {
 	font-size: 1.1rem;
     margin: 0 0 4rem 0;
     padding: 0 0px;
-    _background: var(--bg);
-    background-image: url("bg02.svg");
-	_background-attachment: fixed;
-	_background-repeat: repeat;
+    _background-image: url("bg02.svg");
 	background-size: 100%;
 	color: var(--text);
     line-height: 1.6;
@@ -69,11 +66,6 @@ main{
 	margin: 1rem 7rem;
 }
 
-a{
-	text-decoration: underline overline red dotted;
-	text-underline-offset: 5px;
-}
-
 a.a-red{
 	text-decoration: underline overline red dotted;
 	text-underline-offset: 5px;
@@ -90,6 +82,7 @@ a.blk{
 	border-radius: 5px;
 	padding: 0 5px 0 5px;
 	pointer-events: none;
+	text-decoration: none;
 }
 
 a.yel{
@@ -98,6 +91,7 @@ a.yel{
 	border-radius: 5px;
 	padding: 0 5px 0 5px;
 	pointer-events: none;
+	text-decoration: none;
 }
 
 a.blu{
@@ -106,6 +100,7 @@ a.blu{
 	border-radius: 5px;
 	padding: 0 5px 0 5px;
 	pointer-events: none;
+	text-decoration: none;
 }
 
 a.pink{
@@ -114,11 +109,12 @@ a.pink{
 	border-radius: 5px;
 	padding: 0 5px 0 5px;
 	pointer-events: none;
+	text-decoration: none;
 }
 
 a.isi{
 	text-decoration: underline lightgrey dotted;
-	text-underline-offset: 5px;
+	text-underline-offset: 6px;
 	color: black;
 }
 
@@ -176,6 +172,22 @@ h6 {
 		min-width: 360px;
 		font-size: 0.8rem;
     }
+	
+	header{
+		border: none;
+		box-shadow: 0.1rem 0.1rem lightgrey;
+		width: 95%;
+	}
+
+	main{
+		border: none;
+		box-shadow: 0.1rem 0.1rem lightgrey;
+		width: 95%;
+	}
+	
+	ol{
+	padding: 0 0 1rem 1.5rem;
+	}
 }
 
 /* Format the accordion */
@@ -212,8 +224,17 @@ td{
   background-color: white;
   color: black;
   padding: 0.05rem 0.5rem;
-  border: 1px solid black;
-  box-shadow: 0.1rem 0.1rem black;
+  border: 1px solid grey;
+  box-shadow: 0.1rem 0.1rem grey;
+  text-decoration: none;
+  opacity: 0.4;
+  border-bottom-right-radius: 0.4rem;
+  border-top-left-radius: 0.4rem;
+}
+
+.stt:active {
+  color: yellow;
+  background-color: purple;
 }
 
 .nexar {
@@ -292,7 +313,9 @@ li{
 	padding: 1rem 0.1rem 1rem 0;
 }
 
-
+ol li::marker {
+    color: #0096FF;
+}
 
 hr{
 	width: 85%;
@@ -354,4 +377,26 @@ td.dash {
     to{
         transform: rotate(360deg);
     }
+}
+
+.home {
+  width: 30px;
+  height: 30px;
+  position: fixed;
+  top: 0;
+  right: 10px;
+  z-index: 9;
+  font-size: 1rem;
+  background-color: white;
+  color: black;
+  background-color: lightgrey;
+  opacity: 0.5;
+  border-bottom-left-radius: 0.4rem;
+  border-bottom-right-radius: 0.4rem;
+  text-decoration: none;
+  text-align: center;
+}
+
+.home:active {
+  background-color: purple;
 }
