--- a/style.css
+++ b/style.css
@@ -117,8 +117,9 @@ a.isi{
 a.isi2{
 	text-decoration: underline lightgrey dotted;
 	text-underline-offset: 5px;
-	font-size: 0.6rem;
+	font-size: 0.7rem;
 	font-style: italic;
+	color: red;
 }
 
 #arab{
@@ -170,6 +171,8 @@ h6 {
     }
 	
 	header{
+		border-left: 1px dashed lightgrey;
+		border-top: 1px dashed lightgrey;
 		border: none;
 		box-shadow: 0.1rem 0.1rem lightgrey;
 		width: 95%;
@@ -177,6 +180,7 @@ h6 {
 
 	main{
 		border: none;
+		border-left: 1px dashed lightgrey;
 		box-shadow: 0.1rem 0.1rem lightgrey;
 		width: 95%;
 	}
@@ -187,6 +191,10 @@ h6 {
 	
 	table th, table td{
 		font-size: 0.7rem;
+	}
+	
+	a.isi2{
+	font-size: 0.6rem;
 	}
 }
 
@@ -306,25 +314,16 @@ li{
 	padding: 1rem 0.1rem 1rem 0;
 }
 
+li.ref{
+	padding: 0.1rem 0.1rem 1rem 0;
+}
+
 ol li::marker {
     color: #0096FF;
 }
 
 hr{
 	width: 85%;
-}
-
-.imghr{
-	width: 85%;
-	height: auto;
-	pointer-events: none;
-}
-
-.imghrflip{
-	width: 85%;
-	height: auto;
-	transform: scaleX(-1);
-	pointer-events: none;
 }
 
 sup {
