--- a/style.css
+++ b/style.css
@@ -17,49 +17,16 @@ body {
 	font-size: 1.1rem;
     margin: 0 0 4rem 0;
     padding: 0 0px;
-    _background-image: url("bg02.svg");
 	background-size: 100%;
 	color: var(--text);
     line-height: 1.6;
 }
 
-header,
-main,
-footer {
+header{
     margin: 0px auto;
     max-width: 50rem;
     width: 85%;
 	background: white;
-}
-
-header{
-	margin: 2rem auto auto auto;
-	border-top: 0.125rem solid black;
-	border-right: 0.125rem solid black;
-	border-left: 0.125rem solid black;
-	box-shadow: 0.313rem 0.313rem black;
-	padding: 1rem;
-	border-top-left-radius: 2rem; 
-}
-
-main{
-	border-right: 0.125rem solid black;
-	border-left: 0.125rem solid black;
-	border-bottom: 0.125rem solid black;
-	box-shadow: 0.313rem 0.313rem black;
-	padding: 1rem 0 0 0;
-	border-bottom-right-radius: 2rem;
-}
-
-#td1{
-	border:none; 
-	vertical-align: text-top;
-}
-
-#ol1{
-	font-family: monospace;
-    font-size: 1rem;
-	margin: 1rem 7rem;
 }
 
 a.a-red{
@@ -122,21 +89,6 @@ a.isi2{
 	color: red;
 }
 
-#arab{
-	text-decoration: underline overline grey solid;
-	text-underline-offset: 5px;
-}
-
-.button-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 0.5rem 1.2rem;
-}
-        
-.button-container button {
-    width: 5.5rem;
-}
-
 header h1 {
     font-size: 1.4rem;
     text-align: center;
@@ -164,29 +116,20 @@ h6 {
 
 @media(max-width:500px) {
     body {
-        margin: 0 0 4rem 0;
-        padding: 0 0px;
-		min-width: 360px;
+		width: 360px;
 		font-size: 0.8rem;
+		padding-left: 1rem;
+		padding-right: 1rem;
     }
 	
 	header{
-		border-left: 1px dashed lightgrey;
-		border-top: 1px dashed lightgrey;
 		border: none;
-		box-shadow: 0.1rem 0.1rem lightgrey;
-		width: 95%;
-	}
-
-	main{
-		border: none;
-		border-left: 1px dashed lightgrey;
-		box-shadow: 0.1rem 0.1rem lightgrey;
 		width: 95%;
 	}
 	
 	ol{
-	padding: 0 0 1rem 1.5rem;
+		padding-left: 1rem;
+		padding-right: 1rem;
 	}
 	
 	table th, table td{
@@ -196,22 +139,6 @@ h6 {
 	a.isi2{
 	font-size: 0.6rem;
 	}
-}
-
-/* Format the accordion */
-details {
-	padding: 0.2rem 0.5rem;
-    background: var(--accent);
-    _border-color: purple;
-    _border-radius: 5px;
-    margin: 0.2rem 0.7rem;
-}
-
-summary {
-    cursor: pointer;
-	font-size: 0.9rem;
-	position: sticky;
-	top: 50px;
 }
 
 :root { scroll-behavior: smooth; }
@@ -236,78 +163,6 @@ summary {
 .stt:active {
   color: yellow;
   background-color: purple;
-}
-
-.nexar {
-  position: fixed;
-  bottom: 50%;
-  right: 10px;
-  z-index: 9;
-  font-size: 0.7rem;
-  background-color: white;
-  color: black;
-  padding: 0.2rem 0.4rem;
-  border: 1px solid black;
-  box-shadow: 0.1rem 0.1rem black;
-}
-
-.prevar {
-  position: fixed;
-  bottom: 50%;
-  left: 10px;
-  z-index: 9;
-  font-size: 1rem;
-  background-color: white;
-  color: black;
-  padding: 0.05rem 0.5rem;
-  border: 1px solid black;
-  box-shadow: 0.1rem 0.1rem black;
-}
-
-#image-container {
-            text-align: center;
-            margin-top: 20px;
-        }
-        #image-container img {
-            max-width: 100%;
-            height: auto;
-            border: 2px solid black;
-            border-radius: 10px;
-        }
-        .centered {
-            display: inline;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 0.5rem;
-        }
-        .centered label,
-        .centered select,
-        .navigation-buttons button {
-        font-family: monospace;
-        }
-        .navigation-buttons {
-            margin-top: 1rem;
-        }
-        .navigation-buttons button:disabled {
-            background-color: grey;
-            cursor: not-allowed;
-        }
-		
-p::first-letter{
-   font-size : 20px;
-   font-family: "IM Fell DW Pica", serif;
-}
-
-.im-fell-dw-pica-regular {
-  font-family: "IM Fell DW Pica", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.im-fell-dw-pica-regular-italic {
-  font-family: "IM Fell DW Pica", serif;
-  font-weight: 400;
-  font-style: italic;
 }
 
 li{
