--- a/style.css
+++ b/style.css
@@ -1,230 +1,157 @@
-/* Global colour variables */
-:root {
-    --sans-font: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir, "Nimbus Sans L", Roboto, Noto, "Segoe UI", Arial, Helvetica, "Helvetica Neue", sans-serif;
-    --mono-font: Consolas, Menlo, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
-}
+		body {
+            font-family: Arial, sans-serif;
+            margin: 0 50px;
+            padding: 20px;
+            text-align: left;
+        }
+        
+        h1 {
+            color: #333;
+        }
+        
+        p, ol, li{
+            font-size: 18px;
+            color: #555;
+			padding-top: 20px;
+        }
+		
+		.ol2{
+			padding-left: 40px;
+		}
+		
+		.ol2 li{
+			padding-top: 5px;
+		}
+		
+		img {
+			width: 100%;
+		}
+		
+		a {
+			text-decoration: underline lightgrey dotted;
+			text-underline-offset: 3px;
+			color: inherit;
+		}
+		
+		.grey {
+			color: grey;
+		}
+		
+		.c1, .c2 {
+			padding: 0 3px 0 3px;
+			border-radius: 3px;
+			text-decoration: none;
+			pointer-events: none;
+		}
+		
+		.c1{
+			color: white;
+			background-color: black;
+		}
+			
+		.c2{
+			color: black;
+			background-color: yellow;
+		}
 
-* {
-    box-sizing: border-box;
-}
+		nav {
+			border: 2px solid #ccc;
+			padding: 10px;
+			border-radius: 10px;
+			margin-bottom: 20px;
+			background-color: #f9f9f9;
+		}
 
-html {
-    scroll-behavior: smooth;
-	overflow-y:scroll;
-}
+		nav ol {
+			display: flex;
+			flex-wrap: wrap; /* Allows wrapping to a new line if space is limited */
+			list-style: none;
+			padding-left: 0;
+			margin: 0;
+			justify-content: space-around; /* Space evenly between items */
+		}
 
-body {
-	font-size: 1.1rem;
-	background-size: 100%;
-	color: var(--text);
-    line-height: 1.6;
-	padding-left: 5rem;
-	padding-right: 5rem;
-}
+		nav ol li {
+			margin-right: 15px; /* Space between list items */
+			font-size: 18px;
+		}
 
-header{
-    margin: 0px auto;
-    max-width: 50rem;
-    width: 85%;
-	background: white;
-}
+		nav ol li a {
+			color: #333;
+		}
 
-a.a-red{
-	text-decoration: underline overline red dotted;
-	text-underline-offset: 5px;
-}
+		.stt {
+			position: fixed;
+			bottom: 20px;
+			right: 10px;
+			z-index: 9;
+			width: 15px;
+			height: 18px;
+			font-size: 0.8rem;
+			text-align: center;
+			background-color: white;
+			color: black;
+			border: 1px solid grey;
+			text-decoration: none;
+			opacity: 0.4;
+			border-bottom-right-radius: 5px;
+			border-top-left-radius: 5px;
+		}
 
-a.a-blue{
-	text-decoration: underline overline blue dotted;
-	text-underline-offset: 5px;
-}
+		.stt:active {
+			color: white;
+			background-color: black;
+		}
+		
+		#logo {
+			display: flex;
+			justify-content: center;
+		}
 
-a.blk{
-	color: white;
-	background-color: black;
-	border-radius: 5px;
-	padding: 0 5px 0 5px;
-	pointer-events: none;
-	text-decoration: none;
-}
-
-a.yel{
-	color: black;
-	background-color: yellow;
-	border-radius: 5px;
-	padding: 0 5px 0 5px;
-	pointer-events: none;
-	text-decoration: none;
-}
-
-a.blu{
-	color: black;
-	background-color: #baf9ff;
-	border-radius: 5px;
-	padding: 0 5px 0 5px;
-	pointer-events: none;
-	text-decoration: none;
-}
-
-a.pink{
-	color: black;
-	background-color: #ffc8ea;
-	border-radius: 5px;
-	padding: 0 5px 0 5px;
-	pointer-events: none;
-	text-decoration: none;
-}
-
-a.isi{
-	text-decoration: underline lightgrey dotted;
-	text-underline-offset: 6px;
-	color: black;
-}
-
-a.isi2{
-	text-decoration: underline lightgrey dotted;
-	text-underline-offset: 5px;
-	font-size: 0.7rem;
-	font-style: italic;
-	color: red;
-}
-
-header h1 {
-    font-size: 1.4rem;
-    text-align: center;
-}
-
-header h2 {
-    font-size: 1rem;
-    text-align: center;
-	color: lightgrey;
-}
-
-header{
-	padding-top: 0.5rem;
-	padding-bottom: 0.5rem;
-}
-
-@media(max-width:500px) {
-    body {
-		min-width: 350px;
-		max-width: 500px;
-		font-size: 0.8rem;
-		padding-left: 1rem;
-		padding-right: 1rem;
-    }
-	
-	header{
-		border: none;
-		width: 95%;
-	}
-	
-	ol{
-		padding-left: 1rem;
-		padding-right: 1rem;
-	}
-	
-	table th, table td{
-		font-size: 0.7rem;
-	}
-	
-	a.isi2{
-	font-size: 0.6rem;
-	}
-}
-
-:root { scroll-behavior: smooth; }
-
-.stt {
-  position: fixed;
-  bottom: 20px;
-  right: 10px;
-  z-index: 9;
-  font-size: 0.8rem;
-  background-color: white;
-  color: black;
-  padding: 0.05rem 0.5rem;
-  border: 1px solid grey;
-  box-shadow: 0.1rem 0.1rem grey;
-  text-decoration: none;
-  opacity: 0.4;
-  border-bottom-right-radius: 0.4rem;
-  border-top-left-radius: 0.4rem;
-}
-
-.stt:active {
-  color: yellow;
-  background-color: purple;
-}
-
-li{
-	padding: 1rem 0.1rem 1rem 0;
-}
-
-li.ref{
-	padding: 0.1rem 0.1rem 1rem 0;
-}
-
-ol li::marker {
-    color: #0096FF;
-}
-
-hr{
-	width: 85%;
-}
-
-sup {
-	vertical-align: sup;
-    font-size: 0.5rem;
-	color: purple;
-}
-
-table {
-	border-spacing: 0;
-	width: 95%;
-	margin: 1rem auto 1rem auto;
-	border: 1px solid teal none;
-}
-
-th{
-	text-align: center;
-	background-color: #e8daff;
-	font-size: 1rem;
-}
-
-td{
-	vertical-align: top;
-	border-top: 1px solid black;
-	border-right: none;
-	border-left: none;
-	border-bottom: none;
-	text-align: left;
-	padding: 4px 6px;
-	font-size: 1rem;
-}
-
-td.dash {
-	border-left: 1px dashed grey;
-}
-
-.home {
-  width: 30px;
-  height: 30px;
-  position: fixed;
-  top: 0;
-  right: 10px;
-  z-index: 9;
-  font-size: 1rem;
-  background-color: white;
-  color: black;
-  background-color: lightgrey;
-  opacity: 0.5;
-  border-bottom-left-radius: 0.4rem;
-  border-bottom-right-radius: 0.4rem;
-  text-decoration: none;
-  text-align: center;
-}
+		.home {
+			width: 40px;
+			height: 20px;
+			position: fixed;
+			top: 0;
+			right: 10px;
+			z-index: 9;
+			font-size: 10px;
+			background-color: white;
+			color: black;
+			background-color: lightgrey;
+			opacity: 0.5;
+			border-bottom-left-radius: 0.4rem;
+			border-bottom-right-radius: 0.4rem;
+			text-decoration: none;
+			text-align: center;
+			padding: 6px 0 0 0;
+		}
 
 .home:active {
   background-color: purple;
 }
+
+        @media (max-width: 500px) {
+            body {
+                margin: 0 10px;
+            }
+			
+			p, ol, li{
+				font-size: 13px;
+			}
+			
+			ol{
+				padding: 10px;
+			}
+			
+			nav ol {
+				flex-direction: column; /* Stack vertically on small screens */
+				line-height: 0.2;
+			}
+
+			nav ol li {
+				margin: 5px;
+				font-size: 13px;
+				text-align: center;
+			}
+        }
