--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 		body {
-            font-family: Arial, sans-serif;
+			font-family: Arial, sans-serif;
             margin: 0 50px;
+			top: 0;
             padding: 20px;
             text-align: left;
+			overflow-y: scroll;
         }
-        
+		
         h1 {
             color: #333;
         }
@@ -109,27 +111,26 @@
 		}
 
 		.home {
-			width: 40px;
+			width: 50px;
 			height: 20px;
 			position: fixed;
-			top: 0;
-			right: 10px;
+			top: 30px;
+			right: -15px;
+			transform: rotate(90deg);
 			z-index: 9;
 			font-size: 10px;
-			background-color: white;
-			color: black;
-			background-color: lightgrey;
-			opacity: 0.5;
-			border-bottom-left-radius: 0.4rem;
-			border-bottom-right-radius: 0.4rem;
+			color: grey;
+			background-color: #f9f9f9;
+			border-bottom-left-radius: 5px;
+			border-bottom-right-radius: 5px;
 			text-decoration: none;
 			text-align: center;
-			padding: 6px 0 0 0;
+			padding: 20px 0 0 0;
 		}
 
-.home:active {
-  background-color: purple;
-}
+		.home:active {
+			background-color: black;
+		}
 
         @media (max-width: 500px) {
             body {
