--- a/style.css
+++ b/style.css
@@ -8,8 +8,14 @@
         }
 		
         h1 {
-            color: #333;
+            font-size: 23px;
+			color: #555;
         }
+		
+		h3 {
+			font-size: 17px;
+			color: #555;
+		}
         
         p, ol, li{
             font-size: 18px;
@@ -79,7 +85,7 @@
 		}
 
 		nav ol li a {
-			color: #333;
+			color: #555;
 		}
 
 		.stt {
@@ -110,26 +116,14 @@
 			justify-content: center;
 		}
 
-		.home {
-			width: 50px;
-			height: 20px;
-			position: fixed;
-			top: 30px;
-			right: -15px;
-			transform: rotate(90deg);
-			z-index: 9;
-			font-size: 10px;
-			color: grey;
-			background-color: #f9f9f9;
-			border-bottom-left-radius: 5px;
-			border-bottom-right-radius: 5px;
-			text-decoration: none;
-			text-align: center;
-			padding: 20px 0 0 0;
-		}
-
-		.home:active {
-			background-color: black;
+		#title {
+			position: sticky;
+			top: 0px;
+			background-color: white;
+			border-bottom: 2px outset black;
+			line-height: 1.3;
+			padding-left: 5px;
+			margin-top: 0;
 		}
 
         @media (max-width: 500px) {
@@ -142,7 +136,7 @@
 			}
 			
 			ol{
-				padding: 10px;
+				padding: 15px;
 			}
 			
 			nav ol {
