--- a/style.css
+++ b/style.css
@@ -118,9 +118,9 @@
 
 		#title {
 			position: sticky;
-			top: 0px;
+			top: 0;
 			background-color: white;
-			border-bottom: 2px outset black;
+			border-bottom: 2px outset #555;
 			line-height: 1.3;
 			padding-left: 5px;
 			margin-top: 0;
@@ -133,6 +133,14 @@
 			
 			p, ol, li{
 				font-size: 13px;
+			}
+			
+			h1 {
+				font-size: 20px;
+			}
+		
+			h3 {
+				font-size: 15px;
 			}
 			
 			ol{
