--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@
 		
 		img {
 			width: 100%;
+			border: 1px solid #ADD8E6;
+			margin: 10px 0;
 		}
 		
 		a {
@@ -108,15 +110,14 @@
 			bottom: 20px;
 			right: 10px;
 			z-index: 9;
-			width: 15px;
-			height: 18px;
 			font-size: 0.8rem;
 			text-align: center;
-			background-color: #f9f9f9;
+			background-color: #FFCCCB;
 			color: grey;
 			text-decoration: none;
 			border-bottom-right-radius: 5px;
 			border-top-left-radius: 5px;
+			padding: 5px 5px;
 		}
 
 		.stt:active {
