--- a/bodystyle.css
+++ b/bodystyle.css
@@ -45,7 +45,7 @@ body {
 	z-index: 1000; /* Makes sure it stays above other elements */
 }
 
-h3, h5, ol, ul {
+h3, h5, ol, ul, p {
 	color: #555;
 }
 
@@ -155,6 +155,31 @@ img {
 a {
 	text-underline-offset: 3px;
 	color: inherit;
+}
+
+.table-container {
+	overflow-x: auto;
+	width: 100%;
+}
+
+table {
+	border-collapse: collapse;
+	width: 100%;
+	min-width: 300px; /* Makes sure it scrolls on smaller screens */
+}
+
+th, td {
+	border: 1px solid #ccc;
+	padding: 8px 12px;
+	text-align: left;
+}
+
+th {
+	background-color: #6cffd0;
+}
+
+tbody tr:nth-child(even) {
+	background-color: #f9f9f9;
 }
 
 @media (max-width: 800px) {	
